syntax = "proto3";

package bytebase.store;

import "store/changelog.proto";

option go_package = "generated-go/store";

message InstanceChangeHistoryPayload {
  ChangedResources changed_resources = 1;
}
